fixed the twitter embed overflow

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -1,6 +1,6 @@
 .section {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    // padding-top: 100px;
+    // padding-bottom: 100px;
     position: relative;
   }
   
@@ -39,6 +39,4 @@
     background-color: #4252f9;
     color: #ffffff;
   }
-  .twitter-timeline {
-    height: 350px !important;
-}
+ 
